# mls-chat

./: .env  .gitignore  Cargo.toml  build.rs
.sqlx/: query-15a5015da9a17ca116edff86828c28478e693ad4439368dd425d574a771e464b.json  query-2e033046fe67b7af6512f2bed62b2fe2ffa35c9a5328f7fc86ca3d93c3f2314b.json  query-571151fdca99506054f45423f0186924badbf9623f57256d7bd1258425f2f5d0.json  query-914bab23db0359abef219349af66b03f67aa00ee2fe7ee736fbea0587e9487ba.json  query-d5624e7b095758f7ca2b617d70c3ce51decfe13ba687f0f776eb90cdbc4f1b2d.json  query-fb90167375d4f9a08176cf97570e19b583bf3a12356b236c88a9bcad51b12f2d.json
migrations/: 20260214152314_init.sql
proto/: chat.proto
src/: lib.rs  provider.rs  server.rs
src/client/: create_group.rs  group.rs  member.rs  message.rs  mod.rs  register.rs
